// Copyright 2025 The Wireflow Authors, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "internal/grpc";

// The Management service definition.
service ManagementService {

  rpc Login(ManagementMessage) returns (ManagementMessage) {}

  rpc Get (ManagementMessage) returns (ManagementMessage) {}

  rpc List (ManagementMessage) returns (ManagementMessage) {}

  rpc GetNetMap (ManagementMessage) returns (ManagementMessage) {}

  rpc Watch (stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Keepalive(stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Registry (ManagementMessage) returns (ManagementMessage) {}

  // valid token for service
  rpc VerifyToken(ManagementMessage) returns (ManagementMessage) {}

  rpc Do (ManagementMessage) returns (ManagementMessage) {}
}

// ControlMessage is dynamic message for kind to request and response
message ManagementMessage  {
  string pub_key = 1;
  bytes body = 2;
  int32 encrypt = 3;
  int32 version = 4;
  Type type = 5;
  int64 timestamp = 6;

}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message Request {
  string pub_key = 1;
  string appId = 2;
  string token = 3;
}


// MessageType defines the type of message
enum Type {
  MessageTypeCreateNetwork = 0;
  MessageTypeJoinNetwork = 1;
  MessageTypeLeaveNetwork = 2;
}